Add Update Password Function

--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -14,30 +14,32 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activity.member.CheckInActivity">
+        tools:context=".view.activity.member.MemberDashboardActivity">
 
         <Button
             android:id="@+id/btnOut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="84dp"
-            android:layout_marginBottom="306dp"
+            android:layout_marginEnd="76dp"
+            android:layout_marginBottom="128dp"
+            android:onClick="@{()->onClick.onClickOutButton(check)}"
             android:text="OUT"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="@{()->onClick.onClickOutButton(check)}"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.651" />
 
         <Button
             android:id="@+id/btnIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
+            android:layout_marginStart="76dp"
+            android:onClick="@{()->onClick.onClickInButton(check)}"
             android:text="IN"
             app:layout_constraintBottom_toBottomOf="@+id/btnOut"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btnOut"
-            app:layout_constraintVertical_bias="0.0"
-            android:onClick="@{()->onClick.onClickInButton(check)}"/>
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/tvChekIn"
@@ -59,23 +61,10 @@
             android:layout_marginStart="176dp"
             android:layout_marginTop="57dp"
             android:layout_marginEnd="176dp"
-            android:text="USERID"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvChekIn" />
+            app:layout_constraintTop_toBottomOf="@+id/tvChekIn"/>
 
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="158dp"
-            android:layout_marginEnd="165dp"
-            android:layout_marginBottom="190dp"
-            android:text="LOG OUT"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:onClick="@{()->onClick.onClickLogOutButton()}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
