--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent">
 
             <Spinner
-                android:id="@+id/monthSpinner"
+                android:id="@+id/month_spinner"
                 android:layout_width="200dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="40dp"
@@ -31,25 +31,25 @@
                 android:layout_marginBottom="32dp"
                 android:entries="@array/month"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText"
+                app:layout_constraintEnd_toStartOf="@+id/et_year"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_year"
                 android:layout_width="71dp"
                 android:layout_height="43dp"
                 android:layout_marginEnd="13dp"
                 android:ems="10"
                 android:inputType="date"
-                app:layout_constraintBottom_toBottomOf="@+id/monthSpinner"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton"
-                app:layout_constraintTop_toTopOf="@+id/monthSpinner" />
+                app:layout_constraintBottom_toBottomOf="@+id/month_spinner"
+                app:layout_constraintEnd_toStartOf="@+id/btn_search"
+                app:layout_constraintTop_toTopOf="@+id/month_spinner" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btn_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
