--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,91 +17,81 @@
         tools:context=".view.activity.admin.AdminBoardActivity">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="185dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="186dp"
-            android:layout_marginBottom="95dp"
+            android:layout_marginTop="68dp"
             android:text="LOGIN"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintBottom_toTopOf="@+id/etUserid"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.478"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvUserid"
+            android:id="@+id/tv_userid"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="67dp"
-            android:layout_marginTop="215dp"
-            android:text="USER ID"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <TextView
-            android:id="@+id/tvPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginBottom="402dp"
-            android:text="PASSWORD"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvUserid" />
-
-        <EditText
-            android:id="@+id/etUserid"
-            android:layout_width="213dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            android:layout_marginEnd="31dp"
+            android:layout_marginTop="140dp"
+            android:text="USER ID"
+            app:layout_constraintEnd_toStartOf="@id/et_userid"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_login" />
+
+        <TextView
+            android:id="@+id/tv_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="5dp"
+            android:text="PASSWORD"
+            app:layout_constraintBottom_toTopOf="@id/btn_login"
+            app:layout_constraintEnd_toStartOf="@id/et_password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_userid"
+            app:layout_constraintVertical_bias="0.362" />
+
+        <EditText
+            android:id="@+id/et_userid"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="124dp"
             android:ems="10"
             android:hint="USER ID"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="@+id/tvUserid"
+            android:text="@={user.userId}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/tvUserid"
-            app:layout_constraintTop_toTopOf="@+id/tvUserid"
-            app:layout_constraintVertical_bias="0.538"
-            android:text="@={user.userId}"/>
+            app:layout_constraintStart_toEndOf="@id/tv_userid"
+            app:layout_constraintTop_toBottomOf="@id/tv_login" />
 
         <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="wrap_content"
+            android:id="@+id/et_password"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="29dp"
-            android:layout_marginEnd="28dp"
             android:ems="10"
             android:hint="PASSWORD"
             android:inputType="textPassword"
-            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
+            android:text="@={user.password}"
+            app:layout_constraintBottom_toTopOf="@id/btn_login"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/tvPassword"
-            app:layout_constraintTop_toTopOf="@+id/tvPassword"
-            app:layout_constraintVertical_bias="0.538"
-            android:text="@={user.password}"/>
+            app:layout_constraintStart_toEndOf="@id/tv_userid"
+            app:layout_constraintTop_toBottomOf="@id/et_userid"
+            app:layout_constraintVertical_bias="0.313" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="166dp"
-            android:layout_marginTop="109dp"
-            android:layout_marginEnd="157dp"
-            android:layout_marginBottom="233dp"
+            android:layout_marginEnd="160dp"
+            android:layout_marginBottom="180dp"
             android:backgroundTint="#B2A8B4"
+            android:onClick="@{()->onClick.onCLickLoginButton(user)}"
             android:text="LOGIN"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPassword"
-            android:onClick="@{()->onClick.onCLickLoginButton(user)}"/>
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
