--- a/app/src/main/res/layout/change_password_layout.xml
+++ b/app/src/main/res/layout/change_password_layout.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvPassword"
+            android:id="@+id/tv_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
@@ -36,9 +36,9 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="@={user.password}"
-            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_password"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvPassword"
+            app:layout_constraintTop_toTopOf="@+id/tv_password"
             app:layout_constraintVertical_bias="0.461" />
 
         <Button
