--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <data>
+        <variable
+            name="historyData"
+            type="example.com.absensiapp.model.HistDataModel" />
+    </data>
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <androidx.cardview.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_dosen"
@@ -10,7 +18,8 @@
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="6dp"
             card_view:cardElevation="3dp"
-            card_view:cardUseCompatPadding="true">
+            card_view:cardUseCompatPadding="true"
+            android:layout_marginTop="5dp">
     
             <LinearLayout
                 android:layout_width="match_parent"
@@ -21,16 +30,44 @@
                 <TextView
                     android:id="@+id/txt_year"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/txt_month"
+                    android:layout_height="wrap_content"
+                    android:text="@={historyData.outputDate}"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/txt_checkin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/txt_checkin"
+                            android:layout_width="180dp"
+                            android:layout_height="wrap_content"
+                            android:text="@={historyData.outputTimeIn}"
+                            android:gravity="center"
+                            android:background="@drawable/rounded_bottom_green"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"/>
+                        <TextView
+                            android:id="@+id/txt_checkout"
+                            android:layout_width="180dp"
+                            android:layout_height="wrap_content"
+                            android:text="@={historyData.outputTimeOut}"
+                            android:gravity="center"
+                            android:background="@drawable/rounded_bottom_red"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"/>
+
+                    </LinearLayout>
+
+                </FrameLayout>
+
             </LinearLayout>
+
         </androidx.cardview.widget.CardView>
     
     </LinearLayout>
