--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -29,7 +29,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.651"
             android:textColor="@color/white"
-            android:background="@drawable/rounded_button"/>
+            android:background="@drawable/rounded_button"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/btn_in"
@@ -43,7 +44,22 @@
             app:layout_constraintTop_toTopOf="@+id/btn_out"
             app:layout_constraintVertical_bias="0.0"
             android:textColor="@color/white"
-            android:background="@drawable/rounded_button"/>
+            android:background="@drawable/rounded_button"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/btn_override"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="184dp"
+            android:background="@drawable/rounded_button"
+            android:onClick="@{()->onClick.onClickOverrideButton()}"
+            android:text="REQUEST OVERRIDE"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_chek_in"
@@ -57,19 +73,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_userid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="176dp"
-            android:layout_marginTop="57dp"
-            android:layout_marginEnd="176dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_chek_in"/>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
