--- a/app/src/main/res/layout/change_password_layout.xml
+++ b/app/src/main/res/layout/change_password_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="user"
@@ -20,26 +19,23 @@
             android:id="@+id/tv_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginBottom="103dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginBottom="80dp"
             android:text="PASSWORD"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.816" />
+            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/etChangePassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginBottom="68dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:text="@={user.password}"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_password"
-            app:layout_constraintVertical_bias="0.461" />
+            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
+            app:layout_constraintStart_toEndOf="@id/tv_password" />
 
         <Button
             android:id="@+id/btnSubmit"
