--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -9,6 +9,9 @@
         <variable
             name="inputHistory"
             type="example.com.absensiapp.model.InputHistoryModel" />
+        <variable
+            name="ouputHistory"
+            type="example.com.absensiapp.model.OutputHistoryModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,8 +20,8 @@
 
         <FrameLayout
             android:id="@+id/fragment_search"
-            android:layout_width="409dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:layout_marginEnd="1dp"
@@ -30,7 +33,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/search_window"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="match_parent">
 
                 <Spinner
                     android:id="@+id/month_spinner"
@@ -65,11 +68,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="32dp"
+                    android:layout_marginBottom="52dp"
                     android:onClick="@{()->onClick.onClickSearchButton(inputHistory)}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:srcCompat="@drawable/ic_search_black" />
+
+                <TextView
+                    android:id="@+id/tv_attend_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="Number of Attend : "
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/month_spinner"/>
+
+                <TextView
+                    android:id="@+id/tv_number_of_attend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_attend_number"
+                    app:layout_constraintStart_toEndOf="@id/tv_attend_number"
+                    android:text="@={ouputHistory.outputAttend}"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
 
@@ -77,9 +98,10 @@
             android:id="@+id/recycler_view_history"
             android:layout_width="match_parent"
             android:layout_height="620dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingBottom="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_search" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
