--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -8,6 +8,7 @@
             name="onClick"
             type="example.com.absensiapp.view.listener.UserRecycleListener" />
     </data>
+
     <androidx.cardview.widget.CardView
 
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,64 +18,42 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="6dp"
         card_view:cardElevation="3dp"
-        card_view:cardUseCompatPadding="true"
-        android:onClick="@{()->onClick.onClickCardView(user)}">
+        card_view:cardUseCompatPadding="true">
 
-
-        <LinearLayout
-            xmlns:app="http://schemas.android.com/tools"
+        <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="vertical"
             android:padding="5dp">
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/image_view"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:scaleType="centerCrop"/>
-
-                <LinearLayout
-                    android:layout_width="180dp"
-                    android:layout_height="140dp"
-                    android:orientation="vertical"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_toRightOf="@+id/image_view">
-                    <TextView
-                        android:id="@+id/txt_id"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@={user.userId}"/>
-                    <TextView
-                        android:id="@+id/txt_nama"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@={user.name}"/>
-                </LinearLayout>
-
-            </RelativeLayout>
-
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tv_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp">
+                android:text="@={user.userId}"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:id="@+id/tv_nama"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@={user.name}"
+                card_view:layout_constraintStart_toStartOf="@id/tv_id"
+                card_view:layout_constraintTop_toBottomOf="@id/tv_id"/>
 
-                <Button
-                    android:id="@+id/button_delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="@{()->onClick.onClickDeleteButton(user.userId)}"
-                    android:text="DELETE" />
-            </RelativeLayout>
-        </LinearLayout>
+            <Button
+                android:id="@+id/btn_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{()->onClick.onClickDeleteButton(user.userId)}"
+                android:text="DELETE"
+                card_view:layout_constraintStart_toStartOf="@id/tv_id"
+                card_view:layout_constraintTop_toBottomOf="@id/tv_nama"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
+
 </layout>
