--- a/app/src/main/res/menu/navigation_bottom_view.xml
+++ b/app/src/main/res/menu/navigation_bottom_view.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigationHistory"
+        android:id="@+id/navigation_history"
         android:icon="@drawable/ic_history"
         android:title="History"/>
 
     <item
-        android:id="@+id/navigationCheckIn"
+        android:id="@+id/navigation_check_in"
         android:icon="@drawable/ic_check_circle"
         android:title="Check-In"/>
 
     <item
-        android:id="@+id/navigationSetting"
+        android:id="@+id/navigation_setting"
         android:icon="@drawable/ic_settings"
         android:title="Setting"/>
 
