--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -42,6 +42,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        app:backgroundTint="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_admin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
