--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,56 +27,44 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tv_userid"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="140dp"
-            android:text="USER ID"
-            app:layout_constraintEnd_toStartOf="@id/et_userid"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="60dp"
+            android:hint="@string/shr_hint_userid"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_login">
 
-        <TextView
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_userid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="@={user.userId}" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tv_password"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
             android:layout_marginEnd="5dp"
-            android:text="PASSWORD"
-            app:layout_constraintBottom_toTopOf="@id/btn_login"
-            app:layout_constraintEnd_toStartOf="@id/et_password"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:hint="@string/shr_hint_password"
+            app:layout_constraintStart_toStartOf="@id/tv_userid"
             app:layout_constraintTop_toBottomOf="@id/tv_userid"
-            app:layout_constraintVertical_bias="0.362" />
+            app:layout_constraintVertical_bias="0.362">
 
-        <EditText
-            android:id="@+id/et_userid"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="124dp"
-            android:ems="10"
-            android:hint="USER ID"
-            android:inputType="textPersonName"
-            android:text="@={user.userId}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_userid"
-            app:layout_constraintTop_toBottomOf="@id/tv_login" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:inputType="textPassword"
+                android:text="@={user.password}" />
 
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="PASSWORD"
-            android:inputType="textPassword"
-            android:text="@={user.password}"
-            app:layout_constraintBottom_toTopOf="@id/btn_login"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_userid"
-            app:layout_constraintTop_toBottomOf="@id/et_userid"
-            app:layout_constraintVertical_bias="0.313" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_login"
@@ -84,14 +72,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="160dp"
             android:layout_marginBottom="180dp"
-            android:backgroundTint="#B2A8B4"
             android:onClick="@{()->onClick.onCLickLoginButton(user)}"
             android:text="LOGIN"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/white"/>
+            style="@style/Widget.MaterialComponents.Button.TextButton"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
