--- a/app/src/main/res/layout/confirmation_dialog_layout.xml
+++ b/app/src/main/res/layout/confirmation_dialog_layout.xml
@@ -55,7 +55,7 @@
                 <Button
                     android:id="@+id/btn_yes"
                     android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/rounded_button"
                     android:textColor="@color/white"
                     android:drawableLeft="@drawable/ic_yes"
@@ -67,7 +67,7 @@
                 <Button
                     android:id="@+id/btn_no"
                     android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/rounded_button"
                     android:textColor="@color/white"
